# geometric_sound

./: CMakeLists.txt  README.md  build.sh  run_debug.sh
src/: CMakeLists.txt  audio.h  cube.h  main.cpp  openglcanvas.cpp  openglcanvas.h
